Editted miku lisa img tag

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Hatsune Miku's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: turquoise;">
   <table cellspacing="20">
     <tr>
-      <td><img src="images/miku_lisa.png" width="50%" height="50%" /></td>
+      <td><img src="images/miku_lisa.png" /></td>
       <td>
         <h1>Hatsune Miku</h1>
         <p></p><em>Virtual Diva of <strong><a href="https://en.wikipedia.org/wiki/Crypton_Future_Media">Crypton Future Media</a></strong></em></p>
