--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
       <td><img src="images/miku_lisa.png" /></td>
       <td>
         <h1>Hatsune Miku</h1>
-        <p></p><em>Virtual Diva of <strong><a href="https://en.wikipedia.org/wiki/Crypton_Future_Media">Crypton Future Media</a></strong></em></p>
+        <p></p><em>Virtual Diva of <strong><a href="https://en.wikipedia.org/wiki/Crypton_Future_Media">Crypton Future
+              Media</a></strong></em></p>
         <p>
-          Hatsune Miku , also called Miku Hatsune, and officially code-named CV01, is a Vocaloid software voicebank developed by Crypton Future <br>
-          Media and its official moe anthropomorphism, a 16-year-old girl with long, turquoise twintails. Miku's personification has been marketed <br>
-          as a virtual idol and has performed at live virtual concerts onstage as an animated projection (rear cast projection on a specially coated
+          Hatsune Miku , also called Miku Hatsune, and officially code-named CV01, is a Vocaloid software voicebank
+          developed by Crypton Future <br>
+          Media and its official moe anthropomorphism, a 16-year-old girl with long, turquoise twintails. Miku's
+          personification has been marketed <br>
+          as a virtual idol and has performed at live virtual concerts onstage as an animated projection (rear cast
+          projection on a specially coated
           glass screen).
         </p>
       </td>
