Removed extra p tag in intro

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       <td><img src="images/miku_lisa.png" /></td>
       <td>
         <h1>Hatsune Miku</h1>
-        <p></p><em>Virtual Diva of <strong><a href="https://en.wikipedia.org/wiki/Crypton_Future_Media">Crypton Future
-              Media</a></strong></em></p>
+        <p><em>Virtual Diva of <strong><a href="https://en.wikipedia.org/wiki/Crypton_Future_Media">Crypton Future
+              Media</a></strong></em>
+        </p>
         <p>
           Hatsune Miku , also called Miku Hatsune, and officially code-named CV01, is a Vocaloid software voicebank
           developed by Crypton Future <br>
